--- a/public/css/marx.css
+++ b/public/css/marx.css
@@ -1,6 +1,7 @@
-:root
-{
-	--default-font-list:'Open Sans', 'Nimbus Sans L', 'Helvetica Neue', Helvetica, 'Lucida Grande', sans-serif;
+:root {
+	--default-font-list:system-ui,sans-serif;
+	--monospace-font-list:'Anonymous Pro','Fira Code',Menlo,Monaco,Consolas,'Courier New',monospace;
+	--serif-font-list:Georgia,Times,'Times New Roman',serif;
 	-ms-text-size-adjust:100%;
 	-webkit-text-size-adjust:100%;
 	box-sizing:border-box;
@@ -9,48 +10,41 @@
 	line-height:1.4;
 	overflow-y:scroll;
 	text-size-adjust:100%;
-	scroll-behavior: smooth;
+	scroll-behavior:smooth;
 }
 
-audio:not([controls])
-{
+audio:not([controls]) {
 	display:none;
 }
 
-details
-{
+details {
 	display:block;
 }
 
-input[type=search]
-{
+input[type=search] {
 	-webkit-appearance:textfield;
 }
 
-input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration
-{
+input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration {
 	-webkit-appearance:none;
 }
 
-main
-{
+main {
 	display:block;
 	margin:0 auto;
 	padding:0 1.6em 1.6em;
 	padding:0 1.6rem 1.6rem;
 }
 
-summary
-{
+summary {
 	display:block;
 }
 
-pre
-{
+pre {
 	background:#efefef;
 	color:#444;
 	display:block;
-	font-family:Menlo, Monaco, Consolas, 'Courier New', monospace;
+	font-family:var(--monospace-font-list);
 	font-size:1.4em;
 	font-size:1.4rem;
 	margin:1.6em 0;
@@ -62,29 +56,24 @@ pre
 	word-wrap:break-word;
 }
 
-progress
-{
+progress {
 	display:inline-block;
 }
 
-small
-{
+small {
 	color:#777;
 	font-size:75%;
 }
 
-big
-{
+big {
 	font-size:125%;
 }
 
-template
-{
+template {
 	display:none;
 }
 
-textarea
-{
+textarea {
 	border:.1rem solid #ccc;
 	border-radius:0;
 	display:block;
@@ -95,55 +84,47 @@ textarea
 	vertical-align:middle;
 }
 
-[hidden]
-{
+[hidden] {
 	display:none;
 }
 
-[unselectable]
-{
+[unselectable] {
 	-moz-user-select:none;
 	-ms-user-select:none;
 	-webkit-user-select:none;
 	user-select:none;
 }
 
-*,::before,::after
-{
+*,::before,::after {
 	border-style:solid;
 	border-width:0;
 	box-sizing:inherit;
 }
 
-*
-{
+* {
 	font-size:inherit;
 	line-height:inherit;
 	margin:0;
 	padding:0;
 }
 
-::before,::after
-{
+::before,::after {
 	text-decoration:inherit;
 	vertical-align:inherit;
 }
 
-a
-{
+a {
 	-webkit-transition:.25s ease;
 	color:#1271db;
 	text-decoration:none;
 	transition:.25s ease;
 }
 
-audio,canvas,iframe,img,svg,video
-{
+audio,canvas,iframe,img,svg,video {
 	vertical-align:middle;
 }
 
-button,input,select,textarea
-{
+button,input,select,textarea {
 	border:.1rem solid #ccc;
 	color:inherit;
 	font-family:inherit;
@@ -152,37 +133,31 @@ button,input,select,textarea
 	min-height:1.4em;
 }
 
-code,kbd,pre,samp
-{
-	font-family:Menlo, Monaco, Consolas, 'Courier New', monospace, monospace;
+code,kbd,pre,samp {
+	font-family:var(--monospace-font-list);
 }
 
-table
-{
+table {
 	border-collapse:collapse;
 	border-spacing:0;
 	margin-bottom:1.6rem;
 }
 
-::-moz-selection
-{
+::-moz-selection {
 	background-color:#b3d4fc;
 	text-shadow:none;
 }
 
-::selection
-{
+::selection {
 	background-color:#b3d4fc;
 	text-shadow:none;
 }
 
-button::-moz-focus-inner
-{
+button::-moz-focus-inner {
 	border:0;
 }
 
-body
-{
+body {
 	color:#444;
 	font-family:var(--default-font-list);
 	font-size:1.6rem;
@@ -191,20 +166,17 @@ body
 	padding:0;
 }
 
-p
-{
+p {
 	margin:0 0 1.6rem;
 }
 
-h1,h2,h3,h4,h5,h6
-{
-	font-family:Lato, var(--default-font-list);
+h1,h2,h3,h4,h5,h6 {
+	font-family:var(--default-font-list);
 	margin:2em 0 1.6em;
 	margin:2rem 0 1.6rem;
 }
 
-h1
-{
+h1 {
 	border-bottom:.1rem solid rgba(0,0,0,0.2);
 	font-size:3.6em;
 	font-size:3.6rem;
@@ -212,16 +184,14 @@ h1
 	font-weight:500;
 }
 
-h2
-{
+h2 {
 	font-size:3em;
 	font-size:3rem;
 	font-style:normal;
 	font-weight:500;
 }
 
-h3
-{
+h3 {
 	font-size:2.4em;
 	font-size:2.4rem;
 	font-style:normal;
@@ -229,8 +199,7 @@ h3
 	margin:1.6rem 0 .4rem;
 }
 
-h4
-{
+h4 {
 	font-size:1.8em;
 	font-size:1.8rem;
 	font-style:normal;
@@ -238,8 +207,7 @@ h4
 	margin:1.6rem 0 .4rem;
 }
 
-h5
-{
+h5 {
 	font-size:1.6em;
 	font-size:1.6rem;
 	font-style:normal;
@@ -247,8 +215,7 @@ h5
 	margin:1.6rem 0 .4rem;
 }
 
-h6
-{
+h6 {
 	color:#777;
 	font-size:1.4em;
 	font-size:1.4rem;
@@ -257,66 +224,56 @@ h6
 	margin:1.6rem 0 .4rem;
 }
 
-code
-{
+code {
 	background:#efefef;
 	color:#444;
-	font-family:Menlo, Monaco, Consolas, 'Courier New', monospace;
+	font-family:var(--monospace-font-list);
 	font-size:1.4rem;
 	word-break:break-all;
 	word-wrap:break-word;
 }
 
-a:hover,a:focus
-{
+a:hover,a:focus {
 	text-decoration:none;
 }
 
-dl
-{
+dl {
 	margin-bottom:1.6rem;
 }
 
-dd
-{
+dd {
 	margin-left:4rem;
 }
 
-ul,ol
-{
+ul,ol {
 	margin-bottom:.8rem;
 	padding-left:2rem;
 }
 
-blockquote
-{
+blockquote {
 	border-left:.2rem solid #1271db;
-	font-family:Georgia, Times, 'Times New Roman', serif;
+	font-family:var(--serif-font-list);
 	font-style:italic;
 	margin:1.6rem 0;
 	padding-left:1.6rem;
 }
 
-figcaption
-{
-	font-family:Georgia, Times, 'Times New Roman', serif;
+figcaption {
+	font-family:var(--serif-font-list);
 }
 
-html
-{
+html {
 	font-size:62.5%;
 }
 
-main,header,footer,article,section,aside,details,summary
-{
+main,header,footer,article,section,aside,details,summary {
 	display:block;
 	height:auto;
 	margin:0 auto;
 	width:100%;
 }
 
-footer
-{
+footer {
 	border-top:.1rem solid rgba(0,0,0,0.2);
 	clear:both;
 	display:inline-block;
@@ -326,23 +283,20 @@ footer
 	text-align:center;
 }
 
-hr
-{
+hr {
 	border-top:.1rem solid rgba(0,0,0,0.2);
 	display:block;
 	margin-bottom:1.6rem;
 	width:100%;
 }
 
-img
-{
+img {
 	height:auto;
-	/* max-width:100%; */
+/* max-width:100%; */
 	vertical-align:baseline;
 }
 
-input[type=text],input[type=password],input[type=email],input[type=url],input[type=date],input[type=month],input[type=time],input[type=datetime],input[type=datetime-local],input[type=week],input[type=number],input[type=search],input[type=tel],input[type=color],select
-{
+input[type=text],input[type=password],input[type=email],input[type=url],input[type=date],input[type=month],input[type=time],input[type=datetime],input[type=datetime-local],input[type=week],input[type=number],input[type=search],input[type=tel],input[type=color],select {
 	border:.1rem solid #ccc;
 	border-radius:0;
 	display:inline-block;
@@ -350,8 +304,7 @@ input[type=text],input[type=password],input[type=email],input[type=url],input[ty
 	vertical-align:middle;
 }
 
-input:not([type])
-{
+input:not([type]) {
 	-webkit-appearance:none;
 	background-clip:padding-box;
 	background-color:#fff;
@@ -363,88 +316,73 @@ input:not([type])
 	text-align:left;
 }
 
-input[type=color]
-{
+input[type=color] {
 	padding:.8rem 1.6rem;
 }
 
-input[type=text]:focus,input[type=password]:focus,input[type=email]:focus,input[type=url]:focus,input[type=date]:focus,input[type=month]:focus,input[type=time]:focus,input[type=datetime]:focus,input[type=datetime-local]:focus,input[type=week]:focus,input[type=number]:focus,input[type=search]:focus,input[type=tel]:focus,input[type=color]:focus,select:focus,textarea:focus
-{
+input[type=text]:focus,input[type=password]:focus,input[type=email]:focus,input[type=url]:focus,input[type=date]:focus,input[type=month]:focus,input[type=time]:focus,input[type=datetime]:focus,input[type=datetime-local]:focus,input[type=week]:focus,input[type=number]:focus,input[type=search]:focus,input[type=tel]:focus,input[type=color]:focus,select:focus,textarea:focus {
 	border-color:#b3d4fc;
 }
 
-input:not([type]):focus
-{
+input:not([type]):focus {
 	border-color:#b3d4fc;
 }
 
-input[type=radio],input[type=checkbox]
-{
+input[type=radio],input[type=checkbox] {
 	vertical-align:middle;
 }
 
-input[type=file]:focus,input[type=radio]:focus,input[type=checkbox]:focus
-{
+input[type=file]:focus,input[type=radio]:focus,input[type=checkbox]:focus {
 	outline:.1rem solid thin #444;
 }
 
-input[type=text][disabled],input[type=password][disabled],input[type=email][disabled],input[type=url][disabled],input[type=date][disabled],input[type=month][disabled],input[type=time][disabled],input[type=datetime][disabled],input[type=datetime-local][disabled],input[type=week][disabled],input[type=number][disabled],input[type=search][disabled],input[type=tel][disabled],input[type=color][disabled],select[disabled],textarea[disabled]
-{
+input[type=text][disabled],input[type=password][disabled],input[type=email][disabled],input[type=url][disabled],input[type=date][disabled],input[type=month][disabled],input[type=time][disabled],input[type=datetime][disabled],input[type=datetime-local][disabled],input[type=week][disabled],input[type=number][disabled],input[type=search][disabled],input[type=tel][disabled],input[type=color][disabled],select[disabled],textarea[disabled] {
 	background-color:#efefef;
 	color:#777;
 	cursor:not-allowed;
 }
 
-input:not([type])[disabled]
-{
+input:not([type])[disabled] {
 	background-color:#efefef;
 	color:#777;
 	cursor:not-allowed;
 }
 
-input[readonly],select[readonly],textarea[readonly]
-{
+input[readonly],select[readonly],textarea[readonly] {
 	background-color:#efefef;
 	border-color:#ccc;
 	color:#777;
 }
 
-input:focus:invalid,textarea:focus:invalid,select:focus:invalid
-{
+input:focus:invalid,textarea:focus:invalid,select:focus:invalid {
 	border-color:#e9322d;
 	color:#b94a48;
 }
 
-input[type=file]:focus:invalid:focus,input[type=radio]:focus:invalid:focus,input[type=checkbox]:focus:invalid:focus
-{
+input[type=file]:focus:invalid:focus,input[type=radio]:focus:invalid:focus,input[type=checkbox]:focus:invalid:focus {
 	outline-color:#ff4136;
 }
 
-select
-{
+select {
 	background-color:#fff;
 	border:.1rem solid #ccc;
 }
 
-select[multiple]
-{
+select[multiple] {
 	height:auto;
 }
 
-label
-{
+label {
 	line-height:2;
 }
 
-fieldset
-{
+fieldset {
 	border:0;
 	margin:0;
 	padding:.8rem 0;
 }
 
-legend
-{
+legend {
 	border-bottom:.1rem solid #ccc;
 	color:#444;
 	display:block;
@@ -453,8 +391,7 @@ legend
 	width:100%;
 }
 
-input[type=submit],button
-{
+input[type=submit],button {
 	-moz-user-select:none;
 	-ms-user-select:none;
 	-webkit-transition:.25s ease;
@@ -476,62 +413,52 @@ input[type=submit],button
 	vertical-align:baseline;
 }
 
-input[type=submit] a,button a
-{
+input[type=submit] a,button a {
 	color:#444;
 }
 
-input[type=submit]::-moz-focus-inner,button::-moz-focus-inner
-{
+input[type=submit]::-moz-focus-inner,button::-moz-focus-inner {
 	padding:0;
 }
 
-input[type=submit]:hover,button:hover
-{
+input[type=submit]:hover,button:hover {
 	background:#444;
 	border-color:#444;
 	color:#fff;
 }
 
-input[type=submit]:hover a,button:hover a
-{
+input[type=submit]:hover a,button:hover a {
 	color:#fff;
 }
 
-input[type=submit]:active,button:active
-{
+input[type=submit]:active,button:active {
 	background:#6a6a6a;
 	border-color:#6a6a6a;
 	color:#fff;
 }
 
-input[type=submit]:active a,button:active a
-{
+input[type=submit]:active a,button:active a {
 	color:#fff;
 }
 
-input[type=submit]:disabled,button:disabled
-{
+input[type=submit]:disabled,button:disabled {
 	box-shadow:none;
 	cursor:not-allowed;
-	opacity:.40;
+	opacity:.4;
 }
 
-nav ul
-{
+nav ul {
 	list-style:none;
 	margin:0;
 	padding:0;
 	text-align:center;
 }
 
-nav ul li
-{
+nav ul li {
 	display:inline;
 }
 
-nav a
-{
+nav a {
 	-webkit-transition:.25s ease;
 	border-bottom:.2rem solid transparent;
 	color:#444;
@@ -540,48 +467,40 @@ nav a
 	transition:.25s ease;
 }
 
-nav a:hover,nav li.selected a
-{
+nav a:hover,nav li.selected a {
 	border-color:rgba(0,0,0,0.2);
 }
 
-nav a:active
-{
+nav a:active {
 	border-color:rgba(0,0,0,0.56);
 }
 
-caption
-{
+caption {
 	padding:.8rem 0;
 }
 
-thead th
-{
+thead th {
 	background:#efefef;
 	color:#444;
 }
 
-tr
-{
+tr {
 	background:#fff;
 	margin-bottom:.8rem;
 }
 
-th,td
-{
+th,td {
 	border:.1rem solid #ccc;
 	padding:.8rem 1.6rem;
 	text-align:center;
 	vertical-align:inherit;
 }
 
-tfoot tr
-{
+tfoot tr {
 	background:none;
 }
 
-tfoot td
-{
+tfoot td {
 	color:#efefef;
 	font-size:.8rem;
 	font-style:italic;
@@ -589,28 +508,24 @@ tfoot td
 }
 
 @media screen {
-	[hidden~=screen]
-	{
+	[hidden~=screen] {
 		display:inherit;
 	}
 
-	[hidden~=screen]:not(:active):not(:focus):not(:target)
-	{
+	[hidden~=screen]:not(:active):not(:focus):not(:target) {
 		clip:rect(0000)!important;
 		position:absolute!important;
 	}
 }
 
 @media screen and max-width 40rem {
-	article,section,aside
-	{
+	article,section,aside {
 		clear:both;
 		display:block;
 		max-width:100%;
 	}
 
-	img
-	{
+	img {
 		margin-right:1.6rem;
 	}
 }
